[package]
name = "timeturner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.28"
gzp = "0.11.3"
log = "0.4.20"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.192", features = ["derive"] }
# timeloop = { version = "0.1.0", git = "https://github.com/ctfhacker/timeloop", default-features = false, features = ["disable"] }
timeloop = { version = "0.1.0", git = "https://github.com/ctfhacker/timeloop" }

[profile.release]
panic = "abort"
lto = false
codegen-units = 255
opt-level = 3
debug = true
